<resources>
    <string name="app_name">Read It</string>
    <string name="str_title_settings">Settings</string>
    <string name="str_title_help">Help</string>
    <string name="str_title_make_your_own_read">Make Your Own Read</string>
    <string name="str_title_browse_it">Browse It</string>
    <string name="str_title_docs">Docs</string>
    <string name="str_title_audio_settings">Audio Settings</string>
    <string name="str_title_our_other_apps">Our Other App</string>
    <string name="str_title_images">Images</string>
    <string name="str_title_recent_voice">Recent Voice</string>
    <string name="str_start_typing_here">Start typing here…</string>
    <string name="str_send">Send</string>
    <string name="str_camera">Camera</string>
    <string name="str_settings">Settings</string>
    <string name="str_skip">Skip</string>
    <string name="str_fb_data">218149285671521</string>
    <string name="str_flurry_app">JVGXYTFK2PVNJ4RJBNVJ</string>
    <string name="str_password">Password</string>
    <string name="str_logo_image">logo image</string>
    <string name="str_voice_selection">Voice Selection</string>
    <string name="str_email_id">Email Id</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_or">or</string>
    <string name="str_login_with_google">Login with Google</string>
    <string name="str_login_with_facebook">Login with Facebook</string>
    <string name="str_already_have_an_account">Already have an account? Login!</string>
    <string name="str_login">Login</string>
    <string name="str_british_accent">British Accent</string>
    <string name="str_american_accent">American Accent</string>
    <string name="str_content_image">content image</string>
    <string name="str_new_here">New here? </string>
    <string name="str_sign_in"> Sign In!</string>
    <string name="str_faq">FAQ</string>
    <string name="str_terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="str_app_info">App Info</string>
    <string name="str_logout">Logout</string>
    <string name="str_storage_usage">Storage Usage</string>
    <string name="str_data_usage">Data Usage</string>
    <string name="str_voice_speed">Voice Speed</string>
    <string name="str_tamil">Tamil</string>
    <string name="str_marathi">Marathi</string>
    <string name="str_hindi">Hindi</string>
    <string name="str_accent_selection">Accent selection</string>
    <string name="str_english">English</string>
    <string name="str_language_selection">Language Selection</string>
    <string name="str_female_voice">Female Voice</string>
    <string name="str_male_voice">Male Voice</string>
    <string name="str_audio_settings">Audio Settings</string>
    <string name="str_our_other_apps">Our Other Apps</string>
    <string name="str_help">Help</string>
    <string name="str_lbl_yes">Yes</string>
    <string name="str_lbl_no">No</string>
    <string name="str_lbl_exit_from_app">Do you want to close the app?</string>
    <string name="str_enter_url_here">Enter URL here</string>
    <string name="str_bookmarks">Bookmarks</string>
    <string name="str_recent_search">Recent Search</string>
    <string name="str_recent">Recent</string>
    <string name="str_next">Next</string>
    <string name="str_previous">Previous</string>
    <string name="str_recent_audios">Recent Audios</string>
    <string name="str_more_options">More Options</string>
    <string name="str_copy">Copy</string>
    <string name="str_reload">Reload</string>
    <string name="str_lbl_logout_from_app">Do you want to Logout from App ?</string>
    <string name="str_50mins">50 mins</string>
    <string name="str_60">60%</string>
    <string name="str_speak">Speak</string>
    <string name="str_left">left</string>
    <string name="str_right">right</string>
    <string name="str_login_data">Login to get access to read \nmore than millions books</string>
    <string name="str_pdf">pdf</string>
    <string name="str_field_cant_be_empty">Field can\'t be empty</string>
    <string name="str_error_valid_email">Please enter valid Email-Id</string>
    <string name="str_error_minimum_8">Minimum 8 characters</string>
    <string name="str_error_maximum_15">Maximum 15 Character</string>
    <string name="str_error_pswd">Required at least 1 Uppercase letter, 1 Lowercase letter, 1 Number and 1 Special character</string>
    <string name="str_forward">Forward</string>
    <string name="str_bookmark">Bookmark</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_share">Share</string>
    <string name="str_paste">Paste</string>
    <string name="lbl_no_check_internet">No Internet Connection</string>
    <string name="str_share_app">Share App</string>
    <string name="str_give_feedback">Your Feedback</string>
    <string name="lbl_username">We want to know what you thought of your experience at \n our App Read It so we\'d love to hear your feedback.</string>
    <string name="lbl_email_id">Email-Id</string>
    <string name="lbl_mobile_no">Mobile No.</string>
    <string name="lbl_submit">Send Feedback</string>
    <string name="str_rate_us">Rate Us</string>
    <string name="str_error_valid_mobile">Invalid Mobile No</string>
    <string name="str_play">play</string>
    <string name="str_enjoy_listening_millions_of_free_ebooks_and_many_more">Enjoy listening \n millions of free eBooks \nand many more</string>
    <string name="str_delete">Delete</string>
    <string name="str_select_all">Select All</string>
</resources>