<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/menuSpeak"
        android:icon="@drawable/white_speak"
        android:orderInCategory="100"
        android:title="@string/str_speak"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="200"
        android:title="@string/str_more_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/recent_audios"
                android:title="@string/str_recent_audios"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/audio_settings"
                android:title="@string/str_audio_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/settings"
                android:title="@string/str_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/share_apps"
                android:title="@string/str_share_app"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/rate_us"
                android:title="@string/str_rate_us"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/our_other_apps"
                android:title="@string/str_our_other_apps"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/help"
                android:title="@string/str_help"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/give_feedback"
                android:title="@string/str_give_feedback"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

</menu>