<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/actionCamera"
        android:orderInCategory="100"
        android:title="@string/str_camera"
        app:actionLayout="@layout/action_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionSpeak"
        android:icon="@drawable/white_speak"
        android:orderInCategory="50"
        android:title="@string/str_camera"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="150"
        android:title="@string/str_send"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="200"
        android:title="@string/str_more_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/recent_audios"
                android:title="@string/str_recent_audios"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/audio_settings"
                android:title="@string/str_audio_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/settings"
                android:title="@string/str_settings"
                app:showAsAction="ifRoom" />
            <!--<item-->
                <!--android:id="@+id/scan_device"-->
                <!--android:title="@string/str_scan_device"-->
                <!--android:visible="false"-->
                <!--app:showAsAction="ifRoom" />-->
            <item
                android:id="@+id/share_apps"
                android:title="@string/str_share_app"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/rate_us"
                android:title="@string/str_rate_us"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/our_other_apps"
                android:title="@string/str_our_other_apps"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/help"
                android:title="@string/str_help"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/give_feedback"
                android:title="@string/str_give_feedback"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>