<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menuSpeakBrowser"
        android:icon="@drawable/white_speak"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/str_speak"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuBookmark"
        android:orderInCategory="200"
        android:title="@string/str_bookmark"
        app:actionLayout="@layout/selecting_bookmark"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="500"
        android:title="@string/str_more_options"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menuBookmarksList"
                android:title="@string/str_bookmarks"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menuReload"
                android:title="@string/str_refresh"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menuBack"
                android:title="@string/str_previous"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menuForward"
                android:title="@string/str_forward"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>