<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="100"
        android:title="@string/str_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="200"
        android:title="@string/str_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_seelct_all"
        android:icon="@drawable/ic_filter_none_black_24dp"
        android:orderInCategory="300"
        android:title="@string/str_select_all"
        app:showAsAction="always" />

</menu>